--- a/geonode/documents/templates/documents/document_base.html
+++ b/geonode/documents/templates/documents/document_base.html
@@ -7,6 +7,7 @@
 {% block body_class %}documents{% endblock %}
 
 {% block body_outer %}
+  {{ block.super }}
   {% block body %}{% endblock body %}
   {% block sidebar %}{% endblock sidebar %}
 {% endblock body_outer %}
