--- a/geonode/documents/templates/layouts/doc_panels.html
+++ b/geonode/documents/templates/layouts/doc_panels.html
@@ -57,6 +57,8 @@
                                     <span><label for="{{ document_form.title|id }}">{{ document_form.title.label }}</label></span>
                                     <!--<p class="xxs-font-size">(Name by which the cited resource is known)</p>-->
                                     {{ document_form.title }}
+                                    <span><label for="{{ document_form.title|id }}">{{ document_form.resource.label }}</label></span>
+                                    {{ document_form.resource }}
                                     <div>
                                         <span><label for="{{ document_form.abstract|id }}">{{ document_form.abstract.label }}</label></span>
                                         <!--<p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>-->
