--- a/geonode/maps/templates/layouts/map_panels.html
+++ b/geonode/maps/templates/layouts/map_panels.html
@@ -71,7 +71,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-5">
-                                  <div class="col-lg-12">
+                                  <div class="col-lg-12 keywords-container">
                                     <span><label for="{{ map_form.keywords|id }}">{{ map_form.keywords.label }}</label></span>
                                     <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                     {{ map_form.keywords }}
