--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -264,7 +264,7 @@ span.grippy::after {
                                     </div>
                                 </div>
                                 <div class="col-lg-5">
-                                  <div class="col-lg-12">
+                                  <div class="col-lg-12 keywords-container">
                                     <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
                                     <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                     {{ layer_form.keywords }}
