--- a/geonode/documents/templates/documents/document_metadata.html
+++ b/geonode/documents/templates/documents/document_metadata.html
@@ -80,7 +80,7 @@
               </fieldset>
               
                 <div class="form-actions">
-                  <input type="button" id="btn_back_dwn" class="btn btn-primary" style="display" value="{% trans "<< Back" %}"/>
+                  <input type="button" id="btn_back_dwn" class="btn btn-primary" style="display: none" value="{% trans "<< Back" %}"/>
                   <input type="submit" id="btn_upd_md_dwn" class="btn btn-primary" value="{% trans "Update" %}"/>
                   <input type="button" id="btn_next_dwn" class="btn btn-primary" value="{% trans "Next >>" %}"/>
                 </div>
