--- a/geonode/maps/templates/maps/map_metadata.html
+++ b/geonode/maps/templates/maps/map_metadata.html
@@ -1,4 +1,4 @@
-{% extends "maps/map_base.html" %}
+{% extends "metadata_base.html" %}
 {% load i18n %}
 {% load url from future %}
 {% load bootstrap_tags %}
