--- a/geonode/documents/templates/documents/document_metadata.html
+++ b/geonode/documents/templates/documents/document_metadata.html
@@ -1,4 +1,4 @@
-{% extends "documents/document_base.html" %}
+{% extends "metadata_base.html" %}
 {% load i18n %}
 {% load bootstrap_tags %}
 {% load url from future %}
