--- a/geonode/documents/templates/layouts/doc_panels.html
+++ b/geonode/documents/templates/layouts/doc_panels.html
@@ -16,13 +16,13 @@
 <div id="edit-metadata" class="tab-content tab-pane fade in active">
   <div id="completeness-hints" class="progress">
   
-  <div class="mandatory-hint progress-bar" role="progressbar" style="width:33%">
+  <div class="mandatory-hint progress-bar" role="progressbar" style="width:25%">
     Mandatory
   </div>
-  <div class="advanced-hint progress-bar" role="progressbar" style="width:34%">
+  <div class="advanced-hint progress-bar" role="progressbar" style="width:25%">
     Mandatory
   </div>
-  <div class="progress-bar" role="progressbar" style="width:33%">
+  <div class="progress-bar" role="progressbar" style="width:50%">
     Optional
   </div>
     15 %
@@ -70,6 +70,7 @@
                                     <span><label for="{{ document_form.keywords|id }}">{{ document_form.keywords.label }}</label></span>
                                     <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                     {{ document_form.keywords }}
+                                    <div id="treeview" class=""></div>
                                   </div>
                                     <div class="col-lg-12 thesauri_keywords">
                                           {{ tkeywords_form }}
