--- a/geonode/layers/templates/layers/layer_metadata.html
+++ b/geonode/layers/templates/layers/layer_metadata.html
@@ -1,4 +1,4 @@
-{% extends "layers/layer_base.html" %}
+{% extends "metadata_base.html" %}
 {% load i18n %}
 {% load url from future %}
 {% load bootstrap_tags %}
