--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -268,6 +268,7 @@ span.grippy::after {
                                     <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
                                     <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                     {{ layer_form.keywords }}
+                                    <div id="treeview" class=""></div>
                                   </div>
                                     <div class="col-lg-12 thesauri_keywords">
                                           {{ tkeywords_form }}
