--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -340,14 +340,37 @@
 
         var params = typeof FILTER_TYPE == 'undefined' ? {} : {'type': FILTER_TYPE};
         $.ajax('/h_keywords_api', {params: params}).success(function(data){
-            /*$('#treeview').treeview({
+            data = JSON.parse(data)
+            /* var kws = [];
+            for (kw in data) {
+                if (data[kw] && data[kw].text) {
+				    kws.push(data[kw].text);
+                }
+            } */
+
+		    $('#id_resource-keywords').tokenfield(/* {
+		        autocomplete: {
+		            source: kws,
+		            delay: 100
+		        },
+		        showAutocompleteOnFocus: true
+		    }*/ )
+
+            $('#treeview').treeview({
+                color: "#428bca",
+                expandIcon: "glyphicon glyphicon-stop",
+                collapseIcon: "glyphicon glyphicon-unchecked",
+                nodeIcon: "glyphicon glyphicon-user",
+                showTags: true,
+                showIcon: false,
+                showCheckbox: false,
                 data: data,
                 levels: 1,
                 onNodeSelected: function($event, $data) {
                     //TODO: This seems a horribly inelegant way of doing this in 12 Lines
                     kws = $('#id_resource-keywords').tokenfield('getTokens');
                     newToken = $data.text
-                    exists = false
+                    exists = false 
                     for (kw in kws) {
                         if (kws[kw]['value'].indexOf(newToken) >=0) {
                             exists = true
@@ -357,22 +380,7 @@
                         $('#id_resource-keywords').tokenfield('createToken', $data.text);
                     }
                 }
-            });*/
-
-            data = JSON.parse(data)
-            var kws = [];
-            for (kw in data) {
-                if (data[kw] && data[kw].text) {
-				    kws.push(data[kw].text);
-                }
-            }
-		    $('#id_resource-keywords').tokenfield({
-		        autocomplete: {
-		            source: kws,
-		            delay: 100
-		        },
-		        showAutocompleteOnFocus: true
-		    })
+            });
         });
     });
 {% endautoescape %}
