Improved completeness tools
 - Now the editor foces the user to select the category
 - Now the missing region selection is notified with red border
 - Fixed mandatory/optional headers for maps and documents

--- a/geonode/templates/metadata_base.html
+++ b/geonode/templates/metadata_base.html
@@ -85,6 +85,10 @@
         .fstResultItem {
             font-size: 1.2em !important;
         }
+        
+        .has-error .fstElement {
+          border-color: red;
+        }
     </style>
 {{ block.super }}
 {% endblock head %}
