--- a/geonode/templates/metadata_base.html
+++ b/geonode/templates/metadata_base.html
@@ -89,6 +89,11 @@
         .has-error .fstElement {
           border-color: red;
         }
+        #basicDescriptiveInfo .treeview {
+          max-height: 200px;
+          overflow: auto;
+          display: block;
+        }
     </style>
 {{ block.super }}
 {% endblock head %}
