--- a/geonode/maps/templates/layouts/map_panels.html
+++ b/geonode/maps/templates/layouts/map_panels.html
@@ -73,9 +73,12 @@
                                 <div class="col-lg-5">
                                   <div class="col-lg-12 keywords-container">
                                     <span><label for="{{ map_form.keywords|id }}">{{ map_form.keywords.label }}</label></span>
+                                    <span class="input-group">
                                     <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                     {{ map_form.keywords }}
-                                    <div id="treeview" class=""></div>
+                                    <span class="input-group-addon" id="treeview-toggle"><i class="fa fa-folder"></i></span>
+                                  </span>
+                                    <div id="treeview" class="" style="display: none"></div>
                                   </div>
                                     <div class="col-lg-12 thesauri_keywords">
                                           {{ tkeywords_form }}
