--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -366,11 +366,11 @@
 
             $('#treeview').treeview({
                 color: "#428bca",
-                expandIcon: "glyphicon glyphicon-stop",
-                collapseIcon: "glyphicon glyphicon-unchecked",
-                nodeIcon: "glyphicon glyphicon-user",
+                expandIcon: "fa fa-folder",
+                collapseIcon: "fa fa-folder-open",
+                nodeIcon: "fa fa-tag",
                 showTags: true,
-                showIcon: false,
+                showIcon: true,
                 showCheckbox: false,
                 data: data,
                 levels: 1,
@@ -387,7 +387,13 @@
                     if (!exists) {
                         $('#id_resource-keywords').tokenfield('createToken', $data.text);
                     }
+                    $('#treeview-toggle').click();
                 }
+            });
+            $('#treeview-toggle').click((e, value) => {
+              $('#treeview').toggle();
+              var icon = $(this).find('i');
+              icon.toggleClass('fa-folder').toggleClass('fa-folder-open');
             });
         });
     });
