--- a/geonode/layers/templates/layers/layer_metadata.html
+++ b/geonode/layers/templates/layers/layer_metadata.html
@@ -20,7 +20,7 @@
 {{ block.super }}
 
 <div class="container-fluid page-header" style="position: relative;">
-  <h2 class="page-title">{% trans "Metadata" %}&nbsp;{% blocktrans with layer.typename as layer_title %}for {{ layer_title }}{% endblocktrans %}</h2>
+  <h2 class="page-title">{% trans "Metadata" %}&nbsp;{% blocktrans with layer.title as layer_title %}for {{ layer_title }}{% endblocktrans %}</h2>
       <div id="profileCompleteness" class="alert alert-info" style="position: absolute; right: 0; top: 0; padding: 4px;">
         <strong>Completeness</strong>
         <div style="padding: 2px;">
