--- a/geonode/documents/templates/documents/document_metadata_advanced.html
+++ b/geonode/documents/templates/documents/document_metadata_advanced.html
@@ -1,94 +1,11 @@
-{% extends "documents/document_base.html" %}
+{% extends "metadata_base.html" %}
 {% load i18n %}
 {% load bootstrap_tags %}
+{% load base_tags %}
+{% load guardian_tags %}
 
 {% block head %}
-
   {% include "geonode/ext_header.html" %}
-  {{ block.super }}
-
-    <style>
-        .xxs-font-size{
-            font-size: 10px;    
-        }
-        textarea{
-            width:100%;
-        }
-        select{
-            width:100%;
-        }
-        .test-class{
-            background-color: red; 
-        }
-        table{
-            table-layout:fixed;
-            width: 100%;
-        }
-        td > input{
-            width: 100%;
-        }
-        .input-empty{
-            border-color: red;
-            border-style: double;
-        }
-
-        input[type="text"] {
-            width: 200px !important;
-            left: 0;
-            right: 0;
-        }
-
-        .tab-pane{
-            height:650px;
-            overflow-y:scroll;
-        }
-        
-        .fancy-checkbox input[type="radio"],
-        .fancy-checkbox input[type="checkbox"],
-        .fancy-checkbox .checked {
-            display: none;
-        }
-         
-        .fancy-checkbox input[type="radio"]:checked ~ .checked,
-        .fancy-checkbox input[type="checkbox"]:checked ~ .checked {
-            display: inline-block;
-            color:red;
-        }
-         
-        .fancy-checkbox input[type="radio"]:checked ~ .unchecked,
-        .fancy-checkbox input[type="checkbox"]:checked ~ .unchecked {
-            display: none;
-        }
-        
-        .tokenfield,
-        #id_resource-title {
-            width: 95% !important;
-        }
-        
-        .leaflet-container { /* all maps */
-            height: 250px !important;
-        }
-        
-        .map-overlay {
-            display: none !important;
-        }
-        
-        #regions_multiselect_container.content {
-            position: absolute;
-        }
-        
-        .fstControls {
-            width: 100% !important;
-        }
-        
-        .fstElement {
-            font-size: 0.8em !important;
-        }
-        
-        .fstResultItem {
-            font-size: 1.2em !important;
-        }    
-    </style>
 {{ block.super }}
 {% endblock %}
 
@@ -98,22 +15,7 @@
 
 {% block body_outer %}
 
-<div class="modal fade" style="width: 100%; height: 100%;" id="preview_pleaseWaitDialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1>Processing...</h1>
-            </div>
-            <div class="modal-body">
-                <div class="progress">
-                  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                    Updating Metadata...
-                  </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{{ block.super }}
 
 <div class="page-header">
   <a href="{% url "document_browse" %}" class="btn btn-primary pull-right">{% trans "Explore Documents" %}</a>
