--- a/geonode/templates/metadata_form_js.html
+++ b/geonode/templates/metadata_form_js.html
@@ -113,20 +113,57 @@
           $('#id_resource-date_picker').datetimepicker(pickerOptions);
           $('#id_resource-temporal_extent_start_picker').datetimepicker(pickerOptions);
           $('#id_resource-temporal_extent_end_picker').datetimepicker(pickerOptions);
-        });
+    });
 
     $(document).ready(function() {
-            $('.has-external-popover').each(function(){
+        $('.has-external-popover').each(function(){
                 var help_text = $(this).attr("data-content");
                 $(this)
                     .closest("div")
                     .children("span:not(.input-group)")
                     .append("<span class='external-popover' data-content='" + help_text + "'><strong><i class='fa fa fa-question-circle fa-1x'></i></strong></span>");
-                });
-            $('.external-popover').each(function(){
+            });
+        $('.external-popover').each(function(){
                 $(this).popover({'trigger':'hover'});
             });
+
+        $("#preview_image").show();
+        $("#preview_map").hide();
+        $("#set_thumbnail").hide();
+
+        var changeTxt = ["Edit Thumbnail", "Exit"];
+
+        $("#change_thumbnail").click(function () {       
+            $(this).text(changeTxt.reverse()[0]);
+            $("#preview_map, #preview_image").toggle(1000);
+            $("#set_thumbnail").toggle();
+
+            // $("#preview_image_src").attr('src', $("#preview_image_src").attr('src')+'?'+Math.random());
+            src = $('#preview_image_src').attr('src');
+               // check for existing ? and remove if found
+               queryPos = src.indexOf('?');
+               if(queryPos != -1) {
+                  src = src.substring(0, queryPos);
+               }    
+               $('#preview_image_src').attr('src', src + '?' + Math.random());
         });
+
+        /*function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#preview_image_src').attr('src', e.target.result);
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $("#imgInp").change(function(){
+            readURL(this);
+        });*/
+    });
 
     $(document).ready(function() {
         var prevNum = 0, totalNum = 0;
@@ -136,7 +173,6 @@
         
         // set proper classes to count empty fields and display them
         var setInputEmpty = function( target, empty ) {
-          
           if($(target).hasClass('value-select')) {
             // tkeywords
             // $(target).toggleClass("input-empty", empty);
@@ -168,19 +204,19 @@
           return el.id.indexOf("autocomplete") < 0 && !$(el).hasClass('value-select') && el.type !== 'radio'  && el.type !== 'button'
         }
         var onInputChange = function(e){
-            if(e.target.value.trim() === '' || e.target.value.trim() === '{}'){
-                if(!$(e.target).hasClass("input-empty")){
-                    setInputEmpty(e.target, true);
-                    if(!!$(this).closest('#mdinfo').length) {
-                        $(e.target).parent().append("<p class='xxs-font-size mandatory-warning'>&nbsp;&nbsp;&nbsp;<strong>* Mandatory field</strong></p>");
-                    }
-                    if(isMandatoryField(this)) {
-                        empty++;
+                if(e.target.value !== undefined && e.target.value.trim() === ''){
+                    if(!$(e.target).hasClass("input-empty")){
+                        setInputEmpty(e.target, true);
+                        if(!!$(this).closest('#mdinfo').length) {
+                            $(e.target).parent().append("<p class='xxs-font-size mandatory-warning'>&nbsp;&nbsp;&nbsp;<strong>* Mandatory field</strong></p>");
+                        }
+                        if(isMandatoryField(this)) {
+                            empty++;
+                        }
                     }
                 }
-            }
-            else{
-                if($(e.target).hasClass("input-empty")){
+            else {
+                if($(e.target).hasClass("input-empty")) {
                     if(isMandatoryField(this)) {
                         empty--;
                     }
