--- a/geonode/documents/templates/documents/document_metadata.html
+++ b/geonode/documents/templates/documents/document_metadata.html
@@ -36,7 +36,7 @@
   </h2>
 </div>
 
-    <form class="form-horizontal" action="{% url "document_metadata" document.id %}" method="POST">
+    <form id="metadata_update" class="form-horizontal" action="{% url "document_metadata" document.id %}" method="POST">
       {% if document_form.errors or category_form.errors or author_form.errors or poc.errors %}
         <p class="bg-danger">{% blocktrans %}Error updating metadata.  Please check the following fields: {% endblocktrans %}</p>
         <ul class="bg-danger">
