--- a/geonode/documents/templates/documents/document_metadata_advanced.html
+++ b/geonode/documents/templates/documents/document_metadata_advanced.html
@@ -26,7 +26,7 @@
     <p class="lead">
         {% trans "Editing details for" %} {{ document.title }}
     </p>
-    <form class="form-horizontal" action="{% url "document_metadata" document.id %}" method="POST">
+    <form id="metadata_update" class="form-horizontal" action="{% url "document_metadata" document.id %}" method="POST">
       {% if document_form.errors or category_form.errors or author_form.errors or poc.errors %}
         <p class="bg-danger">{% blocktrans %}Error updating metadata.  Please check the following fields: {% endblocktrans %}</p>
         <ul class="bg-danger">
